--- a/codecapture/package.json
+++ b/codecapture/package.json
@@ -13,6 +13,7 @@
     "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/vite": "^4.0.0",
     "framer-motion": "^12.0.5",
+    "jszip": "^3.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^4.0.0"
