--- a/codecapture/package.json
+++ b/codecapture/package.json
@@ -16,6 +16,7 @@
     "jszip": "^3.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-toastify": "^11.0.3",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
