--- a/codecapture/package.json
+++ b/codecapture/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.0",
     "framer-motion": "^12.0.5",
     "jszip": "^3.10.1",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-toastify": "^11.0.3",
