--- a/codecapture/package.json
+++ b/codecapture/package.json
@@ -19,7 +19,7 @@
     "react-dom": "^18.3.1",
     "react-toastify": "^11.0.3",
     "tailwindcss": "^4.0.0",
-    "vite": "^6.0.11"
+    "vite": "^4.4.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -30,7 +30,6 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "vite": "^6.0.11"
+    "globals": "^15.14.0"
   }
 }
