--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,10 @@
       }
     }
   ],
-  "routes": [{ "src": "/(.*)", "dest": "/index.html" }]
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
